@@ -39,3 +39,4 @@ v3.0.0	Aug 9, 2022		-- Added asynchronous downloading of recordings.
 v3.1.0	Aug XX, 2022	-- Added ability to download full sonographs of audio recordings from the xeno-canto database.
 				-- gen_meta() will now generate metadata for audio and sonographs seperately. It also will now create a 
 				   different json file for each folder path searched. Please consult the implementation for more info.
+				-- Added setUp() to test.py so new testing folder is created to store test files.
